[package]
name = "mqtt-system-monitor"
description = "Remote System Monitor for Home Assistant with MQTT."
version = "1.2.0"
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/guillaumecl/mqtt-system-monitor"
repository = "https://github.com/guillaumecl/mqtt-system-monitor"
keywords = ["server", "iot"]
categories = ["command-line-utilities", "network-programming"]
publish = true

[lib]
name = "mqtt_system_monitor"

[dependencies]
log = "0.4.17"
rumqttc = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde-inline-default = "0.2.3"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
toml = "0.9.2"
stderrlog = "0.6.0"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.36.1"
strum = "0.27"
strum_macros = "0.27"
convert_case = "0.8.0"
